# LSLForge_patched

./: .gitignore  Readme.md
lslforge/eclipse/lslforge/samples/dialog_example/: dialog_script.lsl
lslforge/eclipse/lslforge/samples/http_request_example/: http_request_script.lsl
lslforge/eclipse/lslforge/samples/http_rpc_example/: rpc_server.lsl
lslforge/haskell/: .gitignore  .project  LslForge.cabal  LslForge.cabal.patch_20140417  Readme.md
lslforge/haskell/src/: LslForge.hs
lslforge/haskell/src/Language/Lsl/: Render.hs  Render.patch  Syntax.hs  Syntax.patch_20140405
lslforge/haskell/src/Language/Lsl/Internal/: Constants.hs  Constants.patch_20140417  EventSigs.hs  FuncSigs.hs  InternalLLFuncs.hs  InternalLLFuncs.patch  InternalLLFuncs.patch_20140417
lslforge/testing/data/scripts/: 3d_radar_rezzer.lsl  3d_radar_scan_ball.lsl  simple-alt.lsl
