Name:           LSLForge
version:        0.1.6
Synopsis:	    An execution and testing framework for the Linden Scripting Language (LSL)
Description:	
	Provides a framework for executing Linden Scripting Language scripts offline,
	i.e. outside a Second Life&#xAE; simulator.  The product is the LslForge executable,
        which works in cooperation with the LSLForge Eclipse plugin (the executable is not
        much use standalone).  This package is a derivate of LSL Plus by Robert Greayer.
Cabal-Version:  >= 1.5
Homepage:       http:/lslforge.googlecode.com/
License:        BSD3
License-file:   LICENSE
Category:	    Language
Copyright:	    Copyright (c) Robert Greayer 2008-2010, Others 2011-2012
Author:         Robert Greayer <robgreayer@yahoo.com>
Maintainer:	    "Newfie Pendragon" <elnewfie@yahoo.com>
Stability:	    experimental
Build-Type:     Custom
Tested-With:	GHC ==6.10.4
Extra-source-files: NOTICE
data-files:     
                lslforge/haskell/dist/build/autogen/cabal_macros.h, 
                lslforge/haskell/dist/build/autogen/Paths_LSLForge.hs, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Data/Generics/Extras/Schemes.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Data/Generics/Extras/Schemes.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Data/Record/LabelExtras.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Data/Record/LabelExtras.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/AccessGenerator.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/AccessGenerator.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Animation.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Animation.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/AvEvents.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/AvEvents.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Breakpoint.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Breakpoint.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/BreakpointsDeserialize.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/BreakpointsDeserialize.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/BuiltInModules.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/BuiltInModules.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/CodeHelper.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/CodeHelper.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/CompilationServer.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/CompilationServer.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Compiler.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Compiler.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Constants.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Constants.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMCombinators.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMCombinators.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMProcessing.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMProcessing.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMSourceDescriptor.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMSourceDescriptor.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMUnitTestDescriptor.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/DOMUnitTestDescriptor.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Evaluation.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Evaluation.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/EventSigs.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/EventSigs.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Exec.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Exec.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/ExecInfo.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/ExecInfo.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/ExpressionHandler.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/ExpressionHandler.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/FuncSigs.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/FuncSigs.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/InternalLLFuncs.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/InternalLLFuncs.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Key.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Key.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Load.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Load.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Log.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Log.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Math.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Math.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/MetaData.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/MetaData.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/NumberParsing.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/NumberParsing.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Optimize.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Optimize.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/OptimizerOptions.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/OptimizerOptions.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Physics.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Physics.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Pragmas.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Pragmas.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SerializationGenerator.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SerializationGenerator.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SerializationInstances.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SerializationInstances.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SHA1.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SHA1.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SimLL.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SimLL.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SimMetaData.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SimMetaData.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SystemTester.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/SystemTester.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/TestResult.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/TestResult.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Type.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Type.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/UnitTester.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/UnitTester.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Util.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/Util.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/WorldState.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/WorldState.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/WorldStateTypes.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/WorldStateTypes.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/XmlCreate.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Internal/XmlCreate.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Parse.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Parse.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/QQ.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/QQ.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Render.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Render.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Sim.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Sim.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Syntax.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/Syntax.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/UnitTest.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/UnitTest.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/UnitTestEnv.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/UnitTestEnv.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/WorldDef.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Language/Lsl/WorldDef.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Text/ParserCombinators/ParsecExtras/Language.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Text/ParserCombinators/ParsecExtras/Language.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Text/ParserCombinators/ParsecExtras/Token.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Text/ParserCombinators/ParsecExtras/Token.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Main.hi, 
                lslforge/haskell/dist/build/LSLForge/LSLForge-tmp/Main.o, 
                lslforge/haskell/dist/build/LSLForge/LSLForge.exe, 
                lslforge/haskell/dist/setup-config, 
                lslforge/haskell/src/Data/Generics/Extras/Schemes.hs, 
                lslforge/haskell/src/Data/Record/LabelExtras.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/AccessGenerator.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Animation.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/AvEvents.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Breakpoint.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/BreakpointsDeserialize.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/BuiltInModules.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/CodeHelper.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/CompilationServer.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Compiler.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Constants.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/DOMCombinators.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/DOMProcessing.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/DOMSourceDescriptor.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/DOMUnitTestDescriptor.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Evaluation.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/EventSigs.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Exec.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/ExecInfo.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/ExpressionHandler.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/FuncSigs.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/InternalLLFuncs.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Key.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Load.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Log.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Math.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/MetaData.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/NumberParsing.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Optimize.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/OptimizerOptions.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Physics.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Pragmas.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SerializationGenerator.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SerializationInstances.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SHA1.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SimLL.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SimMetaData.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/SystemTester.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/TestResult.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Type.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/UnitTester.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/Util.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/WorldState.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/WorldStateTypes.hs, 
                lslforge/haskell/src/Language/Lsl/Internal/XmlCreate.hs, 
                lslforge/haskell/src/Language/Lsl/Parse.hs, 
                lslforge/haskell/src/Language/Lsl/QQ.hs, 
                lslforge/haskell/src/Language/Lsl/Render.hs, 
                lslforge/haskell/src/Language/Lsl/Render.patch, 
                lslforge/haskell/src/Language/Lsl/Sim.hs, 
                lslforge/haskell/src/Language/Lsl/Syntax.hs, 
                lslforge/haskell/src/Language/Lsl/UnitTest.hs, 
                lslforge/haskell/src/Language/Lsl/UnitTestEnv.hs, 
                lslforge/haskell/src/Language/Lsl/WorldDef.hs, 
                lslforge/haskell/src/Text/ParserCombinators/ParsecExtras/Language.hs, 
                lslforge/haskell/src/Text/ParserCombinators/ParsecExtras/Token.hs, 
                lslforge/haskell/src/Text/Here.hs, 
                lslforge/haskell/src/LslForge.hs, 
                lslforge/haskell/LICENSE, 
                lslforge/haskell/LslForge.cabal, 
                lslforge/haskell/LslForge.cabal.bak, 
                lslforge/haskell/NOTICE, 
                lslforge/haskell/Setup.hs

Executable LSLForge
  Build-Depends:  base >= 4.0 && < 5, haskell98, 
     filepath >= 1.1.0.0 && < 1.2, parsec >= 2.1.0.0 && < 3, 
     HaXml >= 1.19 && < 1.20, directory > 1 && < 1.1, array >= 0.2 && < 0.3,
     monads-fd > 0.0 && < 0.1, transformers >= 0.1 && < 0.2, 
     network >= 2.1 && < 2.3, random >= 1.0, containers >= 0.1 && < 0.3,
     old-time, utf8-string >= 0.3 && < 0.4, pureMD5 >= 0.2 && < 3, 
     bytestring >= 0.9 && < 0.10, template-haskell >= 2.3.0.0 && < 2.4, 
     syb >= 0.1.0.0 && < 0.2.0.0, fclabels > 0.4 && < 0.5
  Main-Is:        LslForge.hs
  Hs-Source-Dirs: 
                  src, 
                  src/Data, 
                  src/Data/Generics, 
                  src/Data/Generics/Extras, 
                  src/Data/Record, 
                  src/Language, 
                  src/Language/Lsl, 
                  src/Language/Lsl/Internal, 
                  src/Text, 
                  src/Text/ParserCombinators, 
                  src/Text/ParserCombinators/ParsecExtras
  Other-modules: 
    Data.Generics.Extras.Schemes
    Data.Record.LabelExtras
    Language.Lsl.Internal.AccessGenerator
    Language.Lsl.Internal.Animation
    Language.Lsl.Internal.AvEvents
    Language.Lsl.Internal.Breakpoint
    Language.Lsl.Internal.BreakpointsDeserialize
    Language.Lsl.Internal.BuiltInModules
    Language.Lsl.Internal.CodeHelper
    Language.Lsl.Internal.CompilationServer
    Language.Lsl.Internal.Compiler
    Language.Lsl.Internal.Constants
    Language.Lsl.Internal.DOMCombinators
    Language.Lsl.Internal.DOMProcessing
    Language.Lsl.Internal.DOMSourceDescriptor
    Language.Lsl.Internal.DOMUnitTestDescriptor
    Language.Lsl.Internal.Evaluation
    Language.Lsl.Internal.EventSigs
    Language.Lsl.Internal.Exec
    Language.Lsl.Internal.ExecInfo
    Language.Lsl.Internal.ExpressionHandler
    Language.Lsl.Internal.FuncSigs
    Language.Lsl.Internal.InternalLLFuncs
    Language.Lsl.Internal.Key
    Language.Lsl.Internal.Load
    Language.Lsl.Internal.Log
    Language.Lsl.Internal.Math
    Language.Lsl.Internal.MetaData
    Language.Lsl.Internal.NumberParsing
    Language.Lsl.Internal.Optimize
    Language.Lsl.Internal.OptimizerOptions
    Language.Lsl.Internal.Physics
    Language.Lsl.Internal.Pragmas
    Language.Lsl.Internal.SerializationGenerator
    Language.Lsl.Internal.SerializationInstances
    Language.Lsl.Internal.SHA1
    Language.Lsl.Internal.SimLL
    Language.Lsl.Internal.SimMetaData
    Language.Lsl.Internal.SystemTester
    Language.Lsl.Internal.TestResult
    Language.Lsl.Internal.Type
    Language.Lsl.Internal.UnitTester
    Language.Lsl.Internal.Util
    Language.Lsl.Internal.WorldState
    Language.Lsl.Internal.WorldStateTypes
    Language.Lsl.Internal.XmlCreate
    Language.Lsl.Parse
    Language.Lsl.QQ
    Language.Lsl.Render
    Language.Lsl.Sim
    Language.Lsl.Syntax
    Language.Lsl.UnitTest
    Language.Lsl.UnitTestEnv
    Language.Lsl.WorldDef
    Text.Here
    Text.ParserCombinators.ParsecExtras.Language
    Text.ParserCombinators.ParsecExtras.Token
  Ghc-Options: -fwarn-unused-imports
